--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Buscador de Usuário por username</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="content"></div>
     <script type="module" src="/functions.js"></script>
   </body>
 </html>
